Fixed jumping due to change of dimensions on hover.

--- a/source/CommonJobs/CommonJobs.Mvc.UI/Content/EditEmployee/EditEmployee.less
+++ b/source/CommonJobs/CommonJobs.Mvc.UI/Content/EditEmployee/EditEmployee.less
@@ -81,8 +81,6 @@
 
 .file-dropzone.hover {
 	background-color: #DDD;
-	border-style: dashed;
-	border-width: 2px; 
 }
 
 .file-dropzone.fade {
